2014-08-08  Kai Tietz  <ktietz@redhat.com>

	* semantics.c (expand_or_defer_fn_1): Check for keep-inline-dllexport
	that we operate on a true inline.

2014-08-07  Trevor Saunders  <tsaunders@mozilla.com>

	* class.c, cp-gimplify.c, decl.c, decl2.c, error.c, method.c,
	optimize.c, pt.c, semantics.c: Remove includes of pointer-set.h.

2014-08-07  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51312
	* decl.c (build_enumerator): Handle class types with conversion
	operators via perform_implicit_conversion_flags and
	build_expr_type_conversion.

	* cvt.c (build_expr_type_conversion): Replace pair of errors
	with error + inform.

2014-08-07  Jason Merrill  <jason@redhat.com>

	PR c++/62043
	* parser.c (c_parse_file): Change sorry to fatal_error.

	PR c++/61959
	* semantics.c (cxx_eval_bare_aggregate): Handle POINTER_PLUS_EXPR.

2014-08-07  Trevor Saunders  <tsaunders@mozilla.com>

	* cp-tree.h, pt.c: Use hash_map instead of pointer_map.

2014-08-06  Jason Merrill  <jason@redhat.com>

	* init.c (build_vec_init): Fix constant initialization of
	trailing elements.
	(build_value_init_noctor): Call maybe_constant_init.
	* semantics.c (maybe_constant_init): See through EXPR_STMT and
	conversion to void.

	PR c++/60417
	* init.c (build_vec_init): Reorganize earlier change a bit.

	PR c++/61994
	* init.c (build_vec_init): Leave atype an ARRAY_TYPE
	if we're just returning an INIT_EXPR.

2014-08-06  Jason Merrill  <jason@redhat.com>
	    Braden Obrzut  <admin@maniacsvault.net>

	* pt.c (check_explicit_specialization): Don't test
	DECL_DECLARED_INLINE_P for a variable template.

2014-08-06  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/43906
	* typeck.c (cp_build_binary_op): Extend to more cases the
	-Waddress warning.

2014-08-01  Braden Obrzut  <admin@maniacsvault.net>

	Implement constexpr variable templates
	* decl.c (grokvardecl): Handle specializations of variable templates.
	(grokdeclarator): Handle variable template id expressions and NULL_TREE