@@ -1,3 +1,7 @@
+2014-08-08  Jason Merrill  <jason@redhat.com>
+
+	* pt.c (lookup_template_class_1): Copy abi_tag.
+
 2014-08-08  Kai Tietz  <ktietz@redhat.com>
 
 	* semantics.c (expand_or_defer_fn_1): Check for keep-inline-dllexport
